Fix styling
Set min-height on #champs tab pane so it the overflow isn't hidden under the page footer

--- a/css/main.css
+++ b/css/main.css
@@ -4,29 +4,32 @@
 }
 
 body > .container {
-  /* margin-bottom: 50px; */
+  margin-bottom: 50px;
 }
 
+#champs {
+  min-height: 1400px;
+}
 .container {
   scroll-snap-type: y mandatory;
 }
 
 .flip-h{
-        -moz-transform: scaleX(-1);
-        -webkit-transform: scaleX(-1);
-        -o-transform: scaleX(-1);
-        transform: scaleX(-1);
-        -ms-filter: fliph; /*IE*/
-        filter: fliph; /*IE*/
+  -moz-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  transform: scaleX(-1);
+  -ms-filter: fliph; /*IE*/
+  filter: fliph; /*IE*/
 }
 
-.footer {
+footer {
   background-color: #f5f5f5;
-  bottom: 0;
+  /*bottom: 0;*/
   height: 60px; /* Set the fixed height of the footer here */
   line-height: 60px; /* Vertically center the text there */
-  /* margin-top: 50px; */
-  position: fixed;
+  margin-top: 50px;
+  /* position: fixed; */
   width: 100%;
 }
 
